# lumos-studio

./: AgentsPage.tsx  README.md  TAURI_MIGRATION.md  agent.db  agent.db-shm  agent.db-wal  agents.json  chat.md  chatx.md  components.json  dex.sh  index.html  kill-port.sh  lon.md  lox.md  mastralob.md  note.md  package.json  pnpm-lock.yaml  session-optimization.md  session.md  shd.md  shd2.md  tailwind.config.js  tsconfig.json  verify.md  vite.config.ts  vitest.config.ts
.mastra/: agent.db  agent.db-shm  agent.db-wal
mastrax/: README.md  agent-logs.json  agent.db-shm  agent.db-wal  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
mastrax/drizzle/: 0000_spicy_silvermane.sql  0001_white_silver_centurion.sql
mastrax/examples/: client-usage.js
mastrax/scripts/: build-for-tauri.js  dev-env.js
src/: App.tsx  MainPane.tsx  Sidebar.tsx  globals.d.ts  index.css  index.ejs  index.tsx  interfaces.d.ts  main.css  main.tsx  preload.d.ts  tauri-bridge.ts  tauri.d.ts  window.d.ts  window.d.ts.backup
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mastra_service.rs
src/__tests__/: session-functions.test.ts  sessionActions.test.ts
src/api/: AgentService.ts  MastraService.ts  PluginManager.ts  ToolService.ts  WorkflowExecutor.ts  WorkflowService.ts  mastra.ts  mastraVoice.ts  speech.ts  types.ts
src/app/: page.tsx
src/components/: AIProviderSelect.tsx  Accordion.tsx  AgentEditor.tsx  AgentMarket.tsx  AgentModels.tsx  AgentSelector.tsx  ArtifactsCanvas.tsx  ArtifactsTab.tsx  Chat.tsx  ChatService.ts  ChatTree.tsx  ChatboxAIModelSelect.tsx  ErrorBoundary.tsx  Header.tsx  ImageUploadInput.tsx  InputBox.tsx  LumosAIModelSelect.tsx  Markdown.tsx  MastraChat.tsx  MaxContextMessageCountSlider.tsx  Message.tsx  MessageErrTips.tsx  MessageList.tsx  MiniButton.tsx  OpenAIModelSelect.tsx  PPIOModelSelect.tsx  PasswordTextField.tsx  SessionAnalysis.tsx  SessionItem.tsx  SessionList.tsx  SettingsPage.tsx  ShadcnTest.tsx  SiliconFlowModelSelect.tsx  SimpleSelect.tsx  SmartAgentGallery.tsx  SpeechPlayer.tsx  StyledMenu.tsx  TemperatureSlider.tsx  TextFieldReset.tsx  Toasts.tsx  (+9 more)
src/docs/: session-fixes-summary.md  session-management-guide.md
src/hooks/: index.ts  useAppTheme.ts  useCopilots.ts  useDefaultSystemLanguage.ts  useI18nEffect.ts  useSession.ts  useSessions.ts  useVersion.ts
src/i18n/: locales.ts  parser.ts
src/lib/: utils.ts
src/pages/: AboutWindow.tsx  AgentCreationPage.tsx  AgentMarketPage.tsx  AgentModelsPage.tsx  AgentsPage.tsx  ChatConfigWindow.tsx  ChatPage.tsx  CleanWindow.tsx  CopilotWindow.tsx  HomePage.tsx  PluginMarketPage.tsx  RemoteDialogWindow.tsx  SmartAgentsPage.tsx  ToolEditorPage.tsx  ToolTestPage.tsx  ToolsPage.tsx  WhiteboardPage.tsx  WorkflowEditorPage.tsx  WorkflowListPage.tsx  WorkflowPage.tsx  (+1 more)
(+125 files in other folders)
