[package]
name = "lumos-studio"
version = "0.0.1"
description = "A desktop client for multiple cutting-edge AI models"
authors = ["bennhuang <tohuangbin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumos_studio_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.14", features = [] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-shell = "2.0.0"

[features]
# This feature is used for production builds or when a dev server is not specified.
# NO-CHANGE: features = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

